fluxcd/apps/base/anonymousoverflow/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: anonymousoverflow
  labels:
    routed-gateway: "true"
