fluxcd/apps/base/anonymousoverflow/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: anonymousoverflow
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: anonymousoverflow
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-anubis
    ports:
    - port: 8080
      protocol: TCP
